--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,7 +8,7 @@ steps:
     args: ['push', 'gcr.io/$PROJECT_ID/techtonic-app']
 
   # Deploy container image to Cloud Run
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
       - 'run'
@@ -29,6 +29,12 @@ steps:
       - '2'
       - '--set-cloudsql-instances'
       - '$PROJECT_ID:us-central1:techtonic-postgres'
+      - '--readiness-probe'
+      - 'http-get path=/health readiness-path status=200 timeout=20s period=30s failure-threshold=5'
+      - '--timeout'
+      - '15m'
+      - '--set-env-vars'
+      - 'CSRF_TRUSTED_ORIGINS=https://techtonic-app-253702771417.us-central1.run.app'
 
 options:
   logging: CLOUD_LOGGING_ONLY
